Fix navbar dropdowns on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,19 @@ h1 {
     height: 3rem;
 }
 
+.nav-item {
+    margin-left: 10px;
+    font-size: 3rem;
+}
+
+.navbar-nav .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1000;
+    float: none;
+}
+
 /* HERO IMAGE */
 
 .hero {
